Fix participate button margin on mobile

--- a/packages/react-app/src/styles/details.scss
+++ b/packages/react-app/src/styles/details.scss
@@ -115,6 +115,7 @@
 
   @include mobile {
     margin-top: 30px;
+    margin-left: 0;
     align-items: center !important;
   }
 }
